--- a/index.ipynb
+++ b/index.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "0            141          Freyre           Diego "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "9                  1052  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
        "9        1996 Moto Guzzi 1100i                26"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,24 +429,196 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>employeeNumber</th>\n",
+       "      <th>firstName</th>\n",
+       "      <th>city</th>\n",
+       "      <th>officeCode</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>1370</td>\n",
+       "      <td>Gerard</td>\n",
+       "      <td>Hernandez</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1501</td>\n",
+       "      <td>Larry</td>\n",
+       "      <td>Bott</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>1337</td>\n",
+       "      <td>Loui</td>\n",
+       "      <td>Bondur</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>1166</td>\n",
+       "      <td>Leslie</td>\n",
+       "      <td>Thompson</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>1286</td>\n",
+       "      <td>Foon Yue</td>\n",
+       "      <td>Tseng</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>1612</td>\n",
+       "      <td>Peter</td>\n",
+       "      <td>Marsh</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>1611</td>\n",
+       "      <td>Andy</td>\n",
+       "      <td>Fixter</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>1401</td>\n",
+       "      <td>Pamela</td>\n",
+       "      <td>Castillo</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>1621</td>\n",
+       "      <td>Mami</td>\n",
+       "      <td>Nishi</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>1323</td>\n",
+       "      <td>George</td>\n",
+       "      <td>Vanauf</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>1165</td>\n",
+       "      <td>Leslie</td>\n",
+       "      <td>Jennings</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>1702</td>\n",
+       "      <td>Martin</td>\n",
+       "      <td>Gerard</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>1216</td>\n",
+       "      <td>Steve</td>\n",
+       "      <td>Patterson</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>13</td>\n",
+       "      <td>1188</td>\n",
+       "      <td>Julie</td>\n",
+       "      <td>Firrelli</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14</td>\n",
+       "      <td>1504</td>\n",
+       "      <td>Barry</td>\n",
+       "      <td>Jones</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   employeeNumber firstName       city officeCode\n",
+       "0            1370    Gerard  Hernandez          4\n",
+       "1            1501     Larry       Bott          7\n",
+       "2            1337      Loui     Bondur          4\n",
+       "3            1166    Leslie   Thompson          1\n",
+       "4            1286  Foon Yue      Tseng          3\n",
+       "5            1612     Peter      Marsh          6\n",
+       "6            1611      Andy     Fixter          6\n",
+       "7            1401    Pamela   Castillo          4\n",
+       "8            1621      Mami      Nishi          5\n",
+       "9            1323    George     Vanauf          3\n",
+       "10           1165    Leslie   Jennings          1\n",
+       "11           1702    Martin     Gerard          4\n",
+       "12           1216     Steve  Patterson          2\n",
+       "13           1188     Julie   Firrelli          2\n",
+       "14           1504     Barry      Jones          7"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cur.execute(\"\"\"SELECT employeeNumber, firstName, lastName\n",
+    "cur.execute(\"\"\"SELECT DISTINCT employeeNumber, firstName, lastName\n",
     "               city, officeCode\n",
     "               FROM employees\n",
     "               JOIN offices\n",
     "               USING(officeCode)\n",
     "               JOIN customers\n",
-    "               USING(customerNumber)\n",
+    "               ON employeeNumber = salesRepEmployeeNumber\n",
     "               JOIN orders\n",
     "               USING(customerNumber)\n",
-    "               WHERE orderNumber IN (SELECT orderNumber\n",
-    "                                     FROM orderdetails\n",
-    "                                     WHERE COUNT(productCode) < 20\n",
-    "                                     )\n",
-    "                                     \"\"\")"
+    "               JOIN orderdetails\n",
+    "               USING(orderNumber)\n",
+    "               WHERE productCode IN (SELECT productCode\n",
+    "                                     FROM products\n",
+    "                                     JOIN orderdetails\n",
+    "                                     USING(productCode)\n",
+    "                                     JOIN orders\n",
+    "                                     USING(orderNumber)\n",
+    "                                     GROUP BY productCode\n",
+    "                                     HAVING COUNT(DISTINCT customerNumber) < 20\n",
+    "                                     );\n",
+    "                                     \"\"\")\n",
+    "\n",
+    "emp_sold_slow_sellers = pd.DataFrame(cur.fetchall())\n",
+    "emp_sold_slow_sellers.columns = [x[0] for x in cur.description]\n",
+    "emp_sold_slow_sellers"
    ]
   },
   {
@@ -458,11 +630,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>employeeNumber</th>\n",
+       "      <th>firstName</th>\n",
+       "      <th>lastName</th>\n",
+       "      <th>num_customers</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>1165</td>\n",
+       "      <td>Leslie</td>\n",
+       "      <td>Jennings</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1166</td>\n",
+       "      <td>Leslie</td>\n",
+       "      <td>Thompson</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>1188</td>\n",
+       "      <td>Julie</td>\n",
+       "      <td>Firrelli</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>1216</td>\n",
+       "      <td>Steve</td>\n",
+       "      <td>Patterson</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>1286</td>\n",
+       "      <td>Foon Yue</td>\n",
+       "      <td>Tseng</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>1323</td>\n",
+       "      <td>George</td>\n",
+       "      <td>Vanauf</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>1337</td>\n",
+       "      <td>Loui</td>\n",
+       "      <td>Bondur</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>1370</td>\n",
+       "      <td>Gerard</td>\n",
+       "      <td>Hernandez</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>1401</td>\n",
+       "      <td>Pamela</td>\n",
+       "      <td>Castillo</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>1501</td>\n",
+       "      <td>Larry</td>\n",
+       "      <td>Bott</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>1504</td>\n",
+       "      <td>Barry</td>\n",
+       "      <td>Jones</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>1611</td>\n",
+       "      <td>Andy</td>\n",
+       "      <td>Fixter</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>1612</td>\n",
+       "      <td>Peter</td>\n",
+       "      <td>Marsh</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>13</td>\n",
+       "      <td>1621</td>\n",
+       "      <td>Mami</td>\n",
+       "      <td>Nishi</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14</td>\n",
+       "      <td>1702</td>\n",
+       "      <td>Martin</td>\n",
+       "      <td>Gerard</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   employeeNumber firstName   lastName  num_customers\n",
+       "0            1165    Leslie   Jennings              6\n",
+       "1            1166    Leslie   Thompson              6\n",
+       "2            1188     Julie   Firrelli              6\n",
+       "3            1216     Steve  Patterson              6\n",
+       "4            1286  Foon Yue      Tseng              7\n",
+       "5            1323    George     Vanauf              8\n",
+       "6            1337      Loui     Bondur              6\n",
+       "7            1370    Gerard  Hernandez              7\n",
+       "8            1401    Pamela   Castillo             10\n",
+       "9            1501     Larry       Bott              8\n",
+       "10           1504     Barry      Jones              9\n",
+       "11           1611      Andy     Fixter              5\n",
+       "12           1612     Peter      Marsh              5\n",
+       "13           1621      Mami      Nishi              5\n",
+       "14           1702    Martin     Gerard              6"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "cur.execute(\"\"\"SELECT employeeNumber, firstName, lastName,\n",
+    "               COUNT(customerNumber) AS num_customers\n",
+    "               FROM employees e          \n",
+    "               JOIN customers c\n",
+    "               ON employeeNumber = salesRepEmployeeNumber\n",
+    "               GROUP BY 1\n",
+    "               HAVING AVG(creditLimit) > 15000;\n",
+    "               \"\"\")\n",
+    "\n",
+    "emp_with_rich_customers = pd.DataFrame(cur.fetchall())\n",
+    "emp_with_rich_customers.columns = [x[0] for x in cur.description]\n",
+    "emp_with_rich_customers"
    ]
   },
   {
